[package]
name = "passable_guard"
version = "1.0.0"
edition = "2018"
description = "A Guard to help you catch leakage of pointers that you pass over a FFI boundary "
homepage = "https://github.com/estchd/passable_guard"
repository = "https://github.com/estchd/passable_guard"
readme = "README.md"
documentation = "https://docs.rs/passable_guard"
license = "Apache-2.0"